Bug 558620: HTTP: finish SetPriority support.  r=dwitte.